@@ -53,7 +53,7 @@ objects are created with the <a href=#CD>pygame.cdrom.CD()</a> function.
 This function needs a cdrom device number to work on. All
 cdrom drives on the system are enumerated for use as a CD
 object. To access most of the CD functions, you'll need to
-<a href=#init>init()</a> the CD. (note that the cdrom module will already
+<a href=pygame.html#init>init()</a> the CD. (note that the cdrom module will already
 be initialized). When multiple CD objects are created for the
 same CDROM device, the state and values for those CD objects
 will be shared.
